<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateUserActivity">

    <include
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/mytoolbar"
        android:id="@+id/nameobject"
        android:text="@string/update_userinfos_activity_title"
        android:gravity="center"
        android:textSize="20sp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="4"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nameobject"
        android:id="@+id/dataInfos">

        <TextView
            android:text="@string/update_userinfos_activity_pseudo"
            android:layout_width="match_parent"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/contact_pseudo"
            />
        <TextView
            android:text="@string/update_userinfos_activity_alias"
            android:layout_width="match_parent"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/contact_alias"
            />
        <TextView
            android:text="@string/update_userinfos_activity_image_d"
            android:layout_width="match_parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_weight="0.9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/contact_image"
                />
            <Button
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_img_contact"
                android:background="@drawable/ic_baseline_image_24"/>
        </LinearLayout>
        <TextView
            android:text="@string/update_userinfos_activity_desc"
            android:layout_width="match_parent"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/contact_desc"
            />
        <TextView
            android:text="@string/update_userinfos_activity_relation"
            android:layout_width="match_parent"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/contact_relation"
            />
    </GridLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_userinfos_activity_send"
        app:layout_constraintTop_toBottomOf="@+id/dataInfos"
        tools:ignore="MissingConstraints"
        android:id="@+id/add_new_contact"/>

</androidx.constraintlayout.widget.ConstraintLayout>