<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_deco"
        android:title="@string/main_activity_menu_deco"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/search_contact"
        android:title="@string/main_activity_menu_contact"
        app:showAsAction="never"/>
    <item android:id="@+id/change_color"
        android:title="@string/main_activity_menu_color"
        app:showAsAction="never"/>
    <item android:id="@+id/fr_l"
        android:title="Francais"
        app:showAsAction="never"/>
    <item android:id="@+id/en_l"
        android:title="English"
        app:showAsAction="never"/>
    <item android:id="@+id/es_l"
        android:title="Español"
        app:showAsAction="never"/>

</menu>